# rocktrainer

./: AGENTS.md  CMakeLists.txt  README.md
.githooks/: pre-push
.github/workflows/: build.yml
charts/: example.json
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  run-linux.sh  run-macos.sh  run-windows.ps1
src/: chart.hpp  chart_mss.cpp  main.cpp
tests/: mss_parser_test.cpp  play_stats_test.cpp  settings_test.cpp  title_test.cpp
